<resources>
    <string name="app_name">Spark</string>
    <string name="question_email">teamsparker66@gmail.com</string>
    <string name="question_subject">스파크 문의 사항</string>
    <string name="question_content">\n\n\nDevice : %s\nOS Version : Android %s\nApp Version : %s\n-------------------------\n\n\n\n문의 사항을 상세히 입력해주세요.</string>
    <string name="binding_error">Binding not initialized to reference the view.</string>
    <string name="link_my_page_policy">https://jealous-supernova-274.notion.site/433c8d2f5fdd4826a836293e522f1d51</string>
    <string name="link_open_source">https://jealous-supernova-274.notion.site/Android-3e35658d9d8f4bc09c4aa61e0efc8cbd</string>
    <string name="link_splash_policy">https://jealous-supernova-274.notion.site/81b28d377e674f9da54566d7da1da6a6</string>
    <string name="link_splash_personal_info">https://jealous-supernova-274.notion.site/eb4f206624434b4289aff279052e990d</string>
    <string name="intro_desc_title">앱 이름</string>
    <string name="intro_content">습관에 불을 지펴봐!</string>
    <string name="intro_update_check_dialog_content">최신 버전의 Spark가 출시되었어요.\n업데이트 후 이용해 주세요!</string>
    <string name="intro_update_check_dialog_confirm">업데이트하기</string>
    <string name="link_update">https://play.google.com/store/apps/details?id=com.teamsparker.android</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_waiting_ticket_left">Waiting\nRoom</string>
    <string name="home_waiting_ticket_right_intro">다른 스파커 기다리는 중...</string>
    <string name="home_ticket_done_user">완료한 사람</string>
    <string name="home_ticket_user_with">함께하는 사람</string>
    <string name="home_ticket_life">우리 팀의 생명</string>
    <string name="home_ticket_left_comment_1">내일부터 시작!</string>
    <string name="home_ticket_left_comment_2">작심삼일 뽀개자!</string>
    <string name="home_ticket_left_comment_3">일주일 넘겨보자!</string>
    <string name="home_ticket_left_comment_4">절반을 향해 달려!</string>
    <string name="home_ticket_left_comment_5">반도 안 남았어!</string>
    <string name="home_ticket_left_comment_6">조금만 더 힘내!</string>
    <string name="home_ticket_left_comment_7">오늘이면 끝!</string>
    <string name="home_ticket_people">명</string>
    <string name="home_ticket_right_finish_content">티켓을 눌러 습관방을\n정리해볼까요?</string>
    <string name="sign_in_desc_title">앱 이름</string>
    <string name="sign_in_content_left">로그인 시&#160;</string>
    <string name="sign_in_content_policy"><u>이용약관</u>과&#160;</string>
    <string name="sign_in_content_personal_info"><u>개인정보 처리 방침</u>에&#160;</string>
    <string name="sign_in_content_right">동의하게 됩니다.</string>
    <string name="sign_in_desc_kakao_login">카카오 로그인 버튼</string>
    <string name="sign_in_kakao_login_failure_msg">카카오 로그인에 실패하였습니다.\n다시 시도해주세요.</string>
    <string name="sign_in_complete_login_msg">로그인되었습니다.</string>
    <string name="profile_desc_back_btn">뒤로가기 버튼</string>
    <string name="profile_desc_quit">종료 버튼</string>
    <string name="profile_info_1">스파크에서 사용할</string>
    <string name="profile_info_2">프로필</string>
    <string name="profile_info_3">을 설정해주세요!</string>
    <string name="profile_desc_photo">프로필 사진 배경</string>
    <string name="profile_nickname_hint">닉네임 입력</string>
    <string name="profile_start_spark">가입 완료</string>
    <string name="profile_nickname_count_sum">/10</string>
    <string name="profile_from_camera">카메라 촬영</string>
    <string name="profile_from_album">앨범에서 선택</string>
    <string name="profile_delete_profile_picture">사진 삭제</string>
    <string name="profile_dialog_content">회원가입이 완료되지 않았습니다.\n그래도 나가시겠습니까?</string>
    <string name="profile_modify_dialog_content">프로필 수정이 완료되지 않았습니다.\n그래도 나가시겠습니까?</string>
    <string name="profile_dialog_stop_signup">나가기</string>
    <string name="profile_dialog_cancel">취소</string>
    <string name="profile_modify">수정 완료</string>
    <string name="item_habit_team_send_count">0</string>
    <string name="item_habit_team_name">name</string>
    <string name="item_habit_team_status_complete">인증을 완료했어요!</string>
    <string name="item_habit_team_status_consider">지금은 고민중이에요.</string>
    <string name="item_habit_team_status_rest">오늘은 쉬어요.</string>
    <string name="item_habit_team_status_none">아직 인증하지 않았어요.</string>
    <string name="item_habit_team_status_ready">인증은 내일부터 가능해요.</string>
    <string name="habit_d_day">D-00</string>
    <string name="habit_start_date">0000.00.00.</string>
    <string name="habit_end_date">9999.99.99.</string>
    <string name="habit_time_title">시간</string>
    <string name="habit_time">time</string>
    <string name="habit_goal_title">목표</string>
    <string name="habit_goal">goal</string>
    <string name="habit_today_certification_btn">오늘의 인증</string>
    <string name="habit_title">title</string>
    <string name="habit_no_purpose_top">아직 구체적인 계획이 없어요.</string>
    <string name="habit_no_purpose_bottom">나만의 시간과 목표를 작성해 보세요!</string>
    <string name="main_bottom_nav_feed">피드</string>
    <string name="main_bottom_nav_home">홈</string>
    <string name="main_bottom_nav_storage">내 보관함</string>
    <string name="main_fab_make_room">방 만들기</string>
    <string name="main_fab_join_code">코드로 참여</string>
    <string name="main_back_btn_msg">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="feed_desc_certificate_photo">피드 인증 사진</string>
    <string name="feed_desc_profile_photo">피드 프로필 사진</string>
    <string name="feed_desc_spark_fire">스파크 아이콘</string>
    <string name="feed_desc_heart">피드 하트 버튼</string>
    <string name="feed_desc_done_tag">done 태그</string>
    <string name="feed_received_spark">받은 스파크</string>
    <string name="feed_bottom_msg">최근 일주일 간의 인증만 표시됩니다.</string>
    <string name="feed_desc_empty_ticket">피드 엠티뷰 티켓 이미지</string>
    <string name="feed_empty_view_msg">아직 올라온 인증이 없어요.\n습관방에서 첫 인증을 시작해 보세요!</string>
    <string name="feed_report">신고하기</string>
    <string name="feed_desc_more">피드 더보기 버튼</string>
    <string name="feed_report_success_toast">신고 접수가 완료되었어요.</string>
    <string name="feed_report_desc_back_btn">뒤로가기 버튼</string>
    <string name="feed_report_title">게시물 신고</string>
    <string name="feed_report_feed_report_cause">신고 이유에 대해 알려주세요.</string>
    <string name="feed_report_hint">해당 게시글을 신고하는 이유에 대해 구체적으로 작성해주세요. (최대 150자)</string>
    <string name="feed_report_description_title">신고 전 잠깐!</string>
    <string name="feed_report_description_content">- 신고하신 내용은 서비스 운영 정책에 따라 처리됩니다.\n- 타당한 근거 없이 신고된 내용은 반영되지 않을 수 있습니다.</string>
    <string name="room_name_setting_title">어떤 습관방을 만들 건가요?</string>
    <string name="room_name_setting_content">진행할 습관을 담아 방 이름을\n설정해 보세요!</string>
    <string name="room_name_setting_edit_text_hint">ex . 30분 독서</string>
    <string name="room_name_setting_text_limit">/15</string>
    <string name="room_name_setting_next_btn_text">다음으로</string>
    <string name="select_confirm_method_title">어떻게 습관을 인증할까요?</string>
    <string name="select_confirm_method_content">습관 유형에 알맞은 인증 방식을\n선택해 주세요.</string>
    <string name="select_confirm_method_enter_waiting">습관방 만들기</string>
    <string name="select_confirm_method_picture_title">사진으로 인증하기</string>
    <string name="select_confirm_method_picture_content">미라클 모닝, 영양제 먹기처럼 특정 순간을\n인증하는 습관에 추천해요.</string>
    <string name="select_confirm_method_add_timer_content">30분 책 읽기, 1시간 러닝처럼 진행 시간을\n인증하는 습관에 추천해요.</string>
    <string name="select_confirm_method_add_timer_title">시간 측정 후 사진으로 인증하기</string>
    <string name="select_confirm_method_dialog_title">우왓👍! 이대로 습관방을 만들까요?\n방 이름과 인증 방식은 더이상 수정이\n안 돼요.</string>
    <string name="select_confirm_method_dialog_done">만들래요</string>
    <string name="timer_step_stopwatch">스톱워치</string>
    <string name="timer_step_photo">사진</string>
    <string name="timer_bottom_btn_mode_start">시작하기</string>
    <string name="timer_bottom_btn_mode_next">다음 단계로</string>
    <string name="timer_dialog_stop_content">이미 측정한 시간 기록이 사라집니다.\n그래도 나가시겠습니까?</string>
    <string name="timer_dialog_stop_timer_content">스톱워치를 초기화하시겠습니까?</string>
    <string name="timer_dialog_stop_timer">초기화</string>
    <string name="waiting_room_copy_code">코드 복사</string>
    <string name="waiting_room_confirm_method">습관 인증 방식</string>
    <string name="waiting_room_confirm_photo">사진인증</string>
    <string name="waiting_room_confirn_timer">스톱워치</string>
    <string name="waiting_room_when">시간</string>
    <string name="waiting_room_purpose">목표</string>
    <string name="waiting_room_we_sparker">함께하는 스파커들</string>
    <string name="waiting_room_we_sparker_explain">습관방은 최대 10명까지 입장할 수 있습니다.</string>
    <string name="waiting_room_start_habit">습관 시작하기</string>
    <string name="waiting_room_no_purpose">습관을 성공하기 위한</string>
    <string name="waiting_room_no_purpose_second_line">시간과 목표를 작성해 주세요!</string>
    <string name="waiting_room_copy_code_toast">코드를 복사했어요!</string>
    <string name="waiting_room_tooltip_picture">특정 순간을 담아 사진으로 인증해요!</string>
    <string name="waiting_room_tooltip_timer">진행 시간을 측정한 후 사진과 함께 인증해요!</string>
    <string name="waiting_room_purpose_title">나의 목표</string>
    <string name="input_code_dialog_explain">친구에게 받은 코드를 입력해주세요!</string>
    <string name="input_code_dialog_done">확인</string>
    <string name="input_code_dialog_error_message_cant">참여할 수 없는 코드예요.</string>
    <string name="input_code_dialog_error_message_already">이미 참여 중인 코드예요</string>
    <string name="join_code_title">잠깐!\n이 방이 맞나요?</string>
    <string name="join_code_input_again">코드 다시 입력하기</string>
    <string name="join_code_enter_waiting_room">대기방 입장하기</string>
    <string name="set_purpose_title">나의 목표 작성</string>
    <string name="set_purpose_explain_one">\'아침 독서\' 습관방에서의</string>
    <string name="set_purpose_explain_two">시간과 목표를 적어보세요!</string>
    <string name="set_purpose_when">언제 습관을 진행할 건가요?</string>
    <string name="set_purpose_when_example">ex. 잠자기 전 / 오후 5시</string>
    <string name="set_purpose_text_limit">/15</string>
    <string name="set_purpose_my_purpose">나만의 목표는 무엇인가요?</string>
    <string name="set_purpose_my_purpose_example">ex. 포기하지 말자 / 하루에 1페이지씩</string>
    <string name="set_purpose_done_button">작성 완료</string>
    <string name="habit_goal_manage_title">나의 목표 관리</string>
    <string name="habit_goal_manage_tip_top"> 습관방의</string>
    <string name="habit_goal_manage_tip_bottom">시간과 목표를 적어보세요!</string>
    <string name="habit_goal_manage_time_title">언제 습관을 진행할 건가요?</string>
    <string name="habit_goal_manage_time_example">ex. 잠자기 전 / 오후 5시</string>
    <string name="habit_goal_manage_goal_title">나만의 목표는 무엇인가요?</string>
    <string name="habit_goal_manage_goal_example">ex. 포기하지 말자 / 하루에 1페이지씩</string>
    <string name="habit_goal_complete">수정 완료</string>
    <string name="habit_send_spark_title">스파크 보내기</string>
    <string name="habit_send_spark_content">메시지를 선택해 바로 보낼 수 있어요!</string>
    <string name="habit_send_spark_guide">메시지 선택 시 바로 보낼 수 있어요!</string>
    <string name="my_page_main_desc_back_btn">뒤로가기 버튼</string>
    <string name="my_page_main_title">MY</string>
    <string name="my_page_main_desc_profile_img">마이페이지 프로필 이미지</string>
    <string name="my_page_main_profile">프로필</string>
    <string name="my_page_main_desc_modify_profile">프로필 변경 버튼</string>
    <string name="my_page_main_desc_alarm">알림 버튼</string>
    <string name="my_page_main_desc_question">문의하기 버튼</string>
    <string name="my_page_main_desc_policy">약관 및 정책 버튼</string>
    <string name="my_page_main_setting">설정</string>
    <string name="my_page_main_alarm">알림</string>
    <string name="my_page_main_question">문의하기</string>
    <string name="my_page_main_customer_service">고객센터</string>
    <string name="my_page_main_service">서비스</string>
    <string name="my_page_main_policy">약관 및 정책</string>
    <string name="my_page_main_open_source">오픈소스 라이선스</string>
    <string name="my_page_main_version_info">버전 정보</string>
    <string name="my_page_main_version">v1.0.0</string>
    <string name="my_page_main_sign_out">로그아웃</string>
    <string name="my_page_main_withdrawal"><u>회원 탈퇴</u></string>
</resources>